--- a/onStage.html
+++ b/onStage.html
@@ -187,8 +187,8 @@ Author: Mohammed Hisam
                     <div class="progress-outer">
                         <div class="progress">
                             <div class="progress-bar progress-bar-success progress-bar-striped active"
-                                 style="width:30%; box-shadow:-1px 10px 10px rgba(116, 195, 116,0.7); background-color:#74C374;">
-                                <div class="progress-value">Phoenix:60</div>
+                                 style="width:35%; box-shadow:-1px 10px 10px rgba(116, 195, 116,0.7); background-color:#74C374;">
+                                <div class="progress-value">Phoenix:70</div>
                             </div>
                         </div>
                     </div>
@@ -199,8 +199,8 @@ Author: Mohammed Hisam
                     <div class="progress-outer">
                         <div class="progress">
                             <div class="progress-bar progress-bar-warning progress-bar-striped active"
-                                 style="width:4.5%; box-shadow:-1px 10px 10px rgba(240, 173, 78,0.7); background-color:#F0AD4E;">
-                                <div class="progress-value">Falcons:9</div>
+                                 style="width:15.5%; box-shadow:-1px 10px 10px rgba(240, 173, 78,0.7); background-color:#F0AD4E;">
+                                <div class="progress-value">Falcons:29</div>
                             </div>
 
                         </div>
@@ -223,8 +223,8 @@ Author: Mohammed Hisam
                     <div class="progress-outer">
                         <div class="progress">
                             <div class="progress-bar progress-bar-info progress-bar-striped active"
-                                 style="width:1%; box-shadow:-1px 10px 10px rgba(91, 192, 222, 0.7); background-color:#5BC0DE;  ">
-                                <div class="progress-value">Titans:2</div>
+                                 style="width:5%; box-shadow:-1px 10px 10px rgba(91, 192, 222, 0.7); background-color:#5BC0DE;  ">
+                                <div class="progress-value">Titans:10</div>
                             </div>
 
                         </div>
@@ -475,7 +475,7 @@ Author: Mohammed Hisam
         <!-- //Sankagaanam Western -->
 
         <!-- Nadodi Sangeetham Group-->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">നാടോടി സംഗീതം (ഗ്രൂപ്പ്)
             </button>
@@ -491,8 +491,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Anamika & Team</h4>
+                                <h6>Falcons</h6>
+                                <h4>Krishna Priya & Team</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -510,8 +510,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Afiya & Team</h4>
+                                <h6>Titans</h6>
+                                <h4>Nadeem & Team</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -520,7 +520,7 @@ Author: Mohammed Hisam
                 <!-- //2nd Prize -->
 
                  <!-- 3rd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
@@ -911,6 +911,95 @@ Author: Mohammed Hisam
             </div>
         </div>
         <!-- //Western Music -->
+
+        <!-- Western Music Group -->
+
+
+        <div  class="container" style="margin-top: 1rem;">
+            <!-- Item Title -->
+            <button class="collapsible inner-text-title font-weight-bold text-center">പാശ്ചാത്യസംഗീതം (ഗ്രൂപ്പ്)
+            </button>
+            <!-- //Item Title -->
+            <div class="row content">
+                <!-- 1st Prize -->
+                <div class="col-lg-4 col-md-6 features15-col-text">
+                    <a href="#prize" class="d-flex feature-unit align-items-center">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/first.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Falcons</h6>
+                                <h4>Shibila and Team</h4>
+                                <p></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- //1st Prize -->
+
+                <!-- 2nd Prize -->
+                <div class="col-lg-4 col-md-6 features15-col-text">
+                    <a href="#prize" class="d-flex feature-unit align-items-center ">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/second.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Phoenix</h6>
+                                <h4>Ayisha Julna and Team</h4>
+                                <p></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- //2nd Prize -->
+
+                                <!-- 2nd Prize -->
+                <div class="col-lg-4 col-md-6 features15-col-text">
+                    <a href="#prize" class="d-flex feature-unit align-items-center ">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/second.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Titans</h6>
+                                <h4>Shamna and Team</h4>
+                                <p></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- //2nd Prize -->
+
+                <!-- 3rd Prize -->
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
+                    <a href="#prize" class="d-flex feature-unit align-items-center">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/third.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Titans</h6>
+                                <h4>Sona M</h4>
+                                <p>Bcom CA 1st Year</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- //3rd Prize -->
+
+            </div>
+        </div>
+        <!-- //Western Music Group -->
 
         <!-- Lalitha Ganam Boys -->
         <div hidden class="container" style="margin-top: 1rem;">
