--- a/gallery.html
+++ b/gallery.html
@@ -116,7 +116,7 @@ Author: Mohammed Hisam
         <!--</a>-->
         <!--<hr>-->
         <!--</div>-->
-        <div hidden class="row support-bottom text-center ">
+        <div  class="row support-bottom text-center ">
             <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/36.jpg" alt=" ">
                 <a href="gallery/36.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
@@ -208,7 +208,7 @@ Author: Mohammed Hisam
                 <hr>
             </div>
         </div>
-        <h2 class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">No photos uploaded</h2>
+        <h2 hidden class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">No photos uploaded</h2>
         
         <div hidden class="row support-bottom text-center ">
             <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
