--- a/gallery.html
+++ b/gallery.html
@@ -116,7 +116,7 @@ Author: Mohammed Hisam
         <!--</a>-->
         <!--<hr>-->
         <!--</div>-->
-        <div  class="row support-bottom text-center ">
+        <div hidden class="row support-bottom text-center ">
             <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/36.jpg" alt=" ">
                 <a href="gallery/36.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
@@ -211,7 +211,7 @@ Author: Mohammed Hisam
         <h2 hidden class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">No photos uploaded</h2>
         
         <div  class="row support-bottom text-center ">
-            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+<!--             <div  class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/1.png" alt=" ">
                 <a href="gallery/1.png" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
@@ -246,7 +246,7 @@ Author: Mohammed Hisam
                 <a href="gallery/17.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
-            </div>
+            </div> -->
             
             <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/2.jpg" alt=" ">
@@ -320,13 +320,13 @@ Author: Mohammed Hisam
                 </a>
                 <hr>
             </div>
-            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+             <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/14.jpg" alt=" ">
-                <a href="gallery/14.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
+                <a href="gallery/1.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+   <!--         <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/15.jpg" alt=" ">
                 <a href="gallery/15.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
@@ -337,7 +337,7 @@ Author: Mohammed Hisam
                 <a href="gallery/16.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
