--- a/onStage.html
+++ b/onStage.html
@@ -187,8 +187,8 @@ Author: Mohammed Hisam
                     <div class="progress-outer">
                         <div class="progress">
                             <div class="progress-bar progress-bar-success progress-bar-striped active"
-                                 style="width:35%; box-shadow:-1px 10px 10px rgba(116, 195, 116,0.7); background-color:#74C374;">
-                                <div class="progress-value">Phoenix:70</div>
+                                 style="width:38%; box-shadow:-1px 10px 10px rgba(116, 195, 116,0.7); background-color:#74C374;">
+                                <div class="progress-value">Phoenix:76</div>
                             </div>
                         </div>
                     </div>
@@ -199,8 +199,8 @@ Author: Mohammed Hisam
                     <div class="progress-outer">
                         <div class="progress">
                             <div class="progress-bar progress-bar-warning progress-bar-striped active"
-                                 style="width:15.5%; box-shadow:-1px 10px 10px rgba(240, 173, 78,0.7); background-color:#F0AD4E;">
-                                <div class="progress-value">Falcons:29</div>
+                                 style="width:17%; box-shadow:-1px 10px 10px rgba(240, 173, 78,0.7); background-color:#F0AD4E;">
+                                <div class="progress-value">Falcons:34</div>
                             </div>
 
                         </div>
@@ -211,8 +211,8 @@ Author: Mohammed Hisam
                     <div class="progress-outer">
                         <div class="progress">
                             <div class="progress-bar progress-bar-warning progress-bar-striped active"
-                                 style="width:8%; box-shadow:-1px 10px 10px rgba(240,51,50,0.7); background-color:#F03332;">
-                                <div class="progress-value">Warriors:16</div>
+                                 style="width:11%; box-shadow:-1px 10px 10px rgba(240,51,50,0.7); background-color:#F03332;">
+                                <div class="progress-value">Warriors:21</div>
                             </div>
 
                         </div>
@@ -223,8 +223,8 @@ Author: Mohammed Hisam
                     <div class="progress-outer">
                         <div class="progress">
                             <div class="progress-bar progress-bar-info progress-bar-striped active"
-                                 style="width:5%; box-shadow:-1px 10px 10px rgba(91, 192, 222, 0.7); background-color:#5BC0DE;  ">
-                                <div class="progress-value">Titans:10</div>
+                                 style="width:15%; box-shadow:-1px 10px 10px rgba(91, 192, 222, 0.7); background-color:#5BC0DE;  ">
+                                <div class="progress-value">Titans:30</div>
                             </div>
 
                         </div>
@@ -660,7 +660,7 @@ Author: Mohammed Hisam
         <!-- //Nadodi Nirtham -->
 
         <!-- Oppana -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">ഒപ്പന (പെൺ)
             </button>
@@ -676,8 +676,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Rimshana & Team</h4>
+                                <h6>Titans</h6>
+                                <h4>Hasna & Team</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -695,8 +695,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Emerald</h6>
-                                <h4>Dilna Sherin & Team</h4>
+                                <h6>Falcons</h6>
+                                <h4>Haniya & Team</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -714,8 +714,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Fathima Fidha VV & Team</h4>
+                                <h6>Phoenix</h6>
+                                <h4>Fathima Sherin VV & Team</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -1240,7 +1240,7 @@ Author: Mohammed Hisam
         <!-- //Kadhaprasangam -->
 
         <!-- Thiruvadhirakali -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">തിരുവാതിരക്കളി
             </button>
@@ -1256,8 +1256,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Arathi & Team</h4>
+                                <h6>Phoenix</h6>
+                                <h4>Jayalaksmi & Team</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -1266,7 +1266,7 @@ Author: Mohammed Hisam
                 <!-- //1st Prize -->
 
                 <!-- 2nd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center ">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1285,7 +1285,7 @@ Author: Mohammed Hisam
                 <!-- //2nd Prize -->
 
                 <!-- 3rd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1373,9 +1373,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Warriors</h6>
-                                <h4>Sanpra</h4>
-                                <p>BSC Psyco 1st Year</p>
+                                <h6>Titans</h6>
+                                <h4>Gouri Nanda</h4>
+                                <p></p>
                             </div>
                         </div>
                     </a>
@@ -1383,7 +1383,7 @@ Author: Mohammed Hisam
                 <!-- //1st Prize -->
 
                 <!-- 2nd Prize -->
-                <div hidden class="col-lg-4 col-md-6 features15-col-text">
+                <div  class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center ">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1392,9 +1392,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Arathi</h4>
-                                <p>Multimedia 2nd Year</p>
+                                <h6>Warriors</h6>
+                                <h4>Nandana</h4>
+                                <p></p>
                             </div>
                         </div>
                     </a>
