--- a/gallery.html
+++ b/gallery.html
@@ -229,19 +229,19 @@ Author: Mohammed Hisam
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/19.jpg" alt=" ">
                 <a href="gallery/19.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/18.jpg" alt=" ">
                 <a href="gallery/18.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/17.jpg" alt=" ">
                 <a href="gallery/17.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
@@ -278,61 +278,61 @@ Author: Mohammed Hisam
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/7.jpg" alt=" ">
                 <a href="gallery/7.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div hiddenclass="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/8.jpg" alt=" ">
                 <a href="gallery/8.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/9.jpg" alt=" ">
                 <a href="gallery/9.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/10.jpg" alt=" ">
                 <a href="gallery/10.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/11.jpg" alt=" ">
                 <a href="gallery/11.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/12.jpg" alt=" ">
                 <a href="gallery/12.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/13.jpg" alt=" ">
                 <a href="gallery/13.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-   <!--           <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+   <!--           <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/14.jpg" alt=" ">
                 <a href="gallery/14.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-           <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+           <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/15.jpg" alt=" ">
                 <a href="gallery/15.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+            <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/16.jpg" alt=" ">
                 <a href="gallery/16.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
