--- a/gallery.html
+++ b/gallery.html
@@ -211,13 +211,13 @@ Author: Mohammed Hisam
         <h2  class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">Day 1</h2>
         
         <div  class="row support-bottom text-center ">
-<!--             <div  class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+             <div  class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/1.png" alt=" ">
                 <a href="gallery/1.png" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
-            <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+          <!--  <div hidden class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/21.jpg" alt=" ">
                 <a href="gallery/21.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
@@ -234,7 +234,7 @@ Author: Mohammed Hisam
                 <a href="gallery/19.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
-            </div>
+            </div> -->
             <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/18.jpg" alt=" ">
                 <a href="gallery/18.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
@@ -246,7 +246,7 @@ Author: Mohammed Hisam
                 <a href="gallery/17.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
-            </div> -->
+            </div> 
             
             <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/2.jpg" alt=" ">
@@ -320,7 +320,7 @@ Author: Mohammed Hisam
                 </a>
                 <hr>
             </div>
-   <!--           <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
+             <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/14.jpg" alt=" ">
                 <a href="gallery/14.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
@@ -337,7 +337,7 @@ Author: Mohammed Hisam
                 <a href="gallery/16.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
