--- a/gallery.html
+++ b/gallery.html
@@ -208,7 +208,7 @@ Author: Mohammed Hisam
                 <hr>
             </div>
         </div>
-        <h2  class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">Day 1</h2>
+        <h2 hidden class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center"></h2>
         
         <div  class="row support-bottom text-center ">
              <div  class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
